infra/k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: rajivrtk01/auth-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080  # external port on node (you can choose 30000–32767)
